# Quoridor-Musterloesung

./: CMakeLists.txt  Class_diagram.graphml  README.md  main.cpp
GameLib/: ConsoleUi.cpp  ConsoleUi.h  ConsoleUtils.cpp  Coordinate.cpp  DummyPlayer.cpp  DummyPlayer.h  GameDecision.cpp  GameDecision.h  GameField.cpp  GameField.h  GameHost.cpp  GameHost.h  GameRules.cpp  GameRules.h  HumanPlayer.cpp  HumanPlayer.h  MovePlayerDecision.cpp  MovePlayerDecision.h  NoOutputUi.cpp  NoOutputUi.h  PlaceBorderDecision.cpp  PlaceBorderDecision.h  Player.cpp  Player.h  PlayerData.cpp  PlayerData.h  PlayerId.cpp  PlayerId.h  Position.h  RandomBot.cpp  RandomBot.h  SmartBot.cpp  SmartBot.h  Ui.cpp  Ui.h
Graph/Algorithm/: BreadthFirstSearch.h
